--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
         "scm-extractor": "^1.0.6",
         "semver": "^7.3.5",
         "ses": "^0.15.17",
-        "three": "0.150.0",
+        "three": "0.151.0",
         "three-gpu-pathtracer": "^0.0.6",
         "three-instanced-uniforms-mesh": "^0.46.0",
         "three-janitor": "^2.0.1",
@@ -150,7 +150,7 @@
         "@types/react-dom": "18.0.6",
         "@types/react-helmet": "^6.1.5",
         "@types/semver": "^7.3.9",
-        "@types/three": "^0.150.1",
+        "@types/three": "0.151.0",
         "@typescript-eslint/eslint-plugin": "^5.1.0",
         "@typescript-eslint/parser": "^5.1.0",
         "@vitejs/plugin-react": "^2.1.0",
