--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
         "pacote": "^14.0.0",
         "pkware-wasm": "^1.0.0",
         "postprocessing": "6.32.2",
+        "process-replay": "0.0.5",
         "random": "^3.0.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -156,7 +157,6 @@
         "@typescript-eslint/parser": "^5.1.0",
         "@vitejs/plugin-react": "^2.1.0",
         "dotenv": "^16.0.3",
-        "electron": "26.2.0",
         "electron-builder": "^23.3.3",
         "eslint": "^8.24.0",
         "eslint-config-prettier": "^8.5.0",
@@ -170,6 +170,7 @@
         "jest": "^29.0.3",
         "jest-environment-jsdom": "^29.0.3",
         "jest-extended": "^3.1.0",
+        "memfs": "^4.6.0",
         "nunjucks": "^3.2.4",
         "prettier": "^2.7.1",
         "prettier-plugin-glsl": "^0.0.5",
@@ -183,6 +184,7 @@
         "vite": "^3.1.3",
         "vite-plugin-electron": "^0.9.3",
         "vite-plugin-esmodule": "^1.4.2",
+        "vite-plugin-node-polyfills": "^0.15.0",
         "webgl-lint": "^1.9.3"
     },
     "config": {
